Latest build deployed.

--- a/course/.mapping.json
+++ b/course/.mapping.json
@@ -1,1 +1,1 @@
-{"source/main.ptx": ["frontmatter", "activities", "handouts"]}
+{"source/frontmatter.ptx": ["frontmatter"], "source/main.ptx": ["activities", "handouts"]}
